Asyncronous calls to get current temps & access database. Changed to Entity Framework.

--- a/HomeTempMonitor/Web.config
+++ b/HomeTempMonitor/Web.config
@@ -4,9 +4,13 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
   <connectionStrings>
     <add name="templogConnectionString" connectionString="Data Source=BeanWeb;Initial Catalog=templog;Integrated Security=True" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  <add name="templogEntities" connectionString="metadata=res://*/Models.TempLog.csdl|res://*/Models.TempLog.ssdl|res://*/Models.TempLog.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=BeanWeb;initial catalog=templog;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="ChartImageHandler" value="storage=file;timeout=20;url=~/TempImages;" />
   </appSettings>
@@ -16,11 +20,12 @@
       <remove name="ChartImageHandler" />
       <add name="ChartImageHandler" preCondition="integratedMode" verb="GET,HEAD,POST" path="ChartImg.axd" type="System.Web.UI.DataVisualization.Charting.ChartHttpHandler, System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
     </handlers>
-  <modules>
+    <modules>
       <!-- IIS 7.X - Registers 51Degrees Detector Module. Without this call to 51Degrees.core.js won't work.-->
       <remove name="Detector" />
       <add name="Detector" type="FiftyOne.Foundation.Mobile.Detection.DetectorModule, FiftyOne.Foundation" />
-    </modules></system.webServer>
+    </modules>
+  </system.webServer>
   <system.web>
     <identity impersonate="false" />
     <customErrors mode="Off" />
@@ -39,4 +44,14 @@
     </compilation>
     <httpRuntime targetFramework="4.5" />
   </system.web>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
