--- a/HomeTempMonitor/HomeTempMonitor.csproj
+++ b/HomeTempMonitor/HomeTempMonitor.csproj
@@ -46,6 +46,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework">
+      <HintPath>..\packages\EntityFramework.6.1.1\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer">
+      <HintPath>..\packages\EntityFramework.6.1.1\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="FiftyOne.Foundation">
       <HintPath>..\packages\51Degrees.mobi.3.1.9.3\lib\NET40\FiftyOne.Foundation.dll</HintPath>
     </Reference>
@@ -53,6 +59,9 @@
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.6.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Net.Http.Extensions">
@@ -62,6 +71,8 @@
       <HintPath>..\packages\Microsoft.Net.Http.2.2.28\lib\net45\System.Net.Http.Primitives.dll</HintPath>
     </Reference>
     <Reference Include="System.Net.Http.WebRequest" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.DataVisualization" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
@@ -90,6 +101,23 @@
     <Content Include="Mobile\touch-icon-iphone.png" />
     <Content Include="packages.config" />
     <Content Include="51Degrees.config" />
+    <EntityDeploy Include="Models\TempLog.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>TempLog.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="Models\TempLog.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>TempLog.edmx</DependentUpon>
+      <LastGenOutput>TempLog.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="Models\TempLog.edmx.diagram">
+      <DependentUpon>TempLog.edmx</DependentUpon>
+    </Content>
+    <Content Include="Models\TempLog.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>TempLog.edmx</DependentUpon>
+      <LastGenOutput>TempLog1.cs</LastGenOutput>
+    </Content>
     <None Include="Properties\PublishProfiles\BeanWeb.pubxml" />
     <None Include="Properties\PublishProfiles\newWebTemp.pubxml" />
     <None Include="Web.Debug.config">
@@ -109,7 +137,25 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes\CurrentTemps.cs" />
-    <Compile Include="Classes\Temps.cs" />
+    <Compile Include="Models\TempLog.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>TempLog.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\templog.cs">
+      <DependentUpon>TempLog.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\TempLog.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>TempLog.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Models\TempLog1.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>TempLog.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Temps.cs" />
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -127,13 +173,17 @@
     <Compile Include="Mobile\Default.aspx.designer.cs">
       <DependentUpon>Default.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Models\TempsForRange_Result.cs">
+      <DependentUpon>TempLog.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TempReading.cs" />
+    <Compile Include="Models\TempReading.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
-    <Folder Include="TempImages\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
