Switched to using CanvasJS rather than Google Charting so that everything is hosted locally.

--- a/HomeTempMonitor/HomeTempMonitor.csproj
+++ b/HomeTempMonitor/HomeTempMonitor.csproj
@@ -131,6 +131,8 @@
   <ItemGroup>
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
+    <Content Include="Scripts\canvasjs.min.js" />
+    <Content Include="Scripts\jquery.canvasjs.min.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
