--- a/HomeTempMonitor/Web.config
+++ b/HomeTempMonitor/Web.config
@@ -10,7 +10,8 @@
   </configSections>
   <connectionStrings>
     <add name="templogConnectionString" connectionString="Data Source=BeanWeb;Initial Catalog=templog;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="templogEntities" connectionString="metadata=res://*/Models.TempLog.csdl|res://*/Models.TempLog.ssdl|res://*/Models.TempLog.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=BeanWeb;initial catalog=templog;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="templogEntities" connectionString="metadata=res://*/Models.TempLog.csdl|res://*/Models.TempLog.ssdl|res://*/Models.TempLog.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=BeanWeb;initial catalog=templog;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="templogEntities" connectionString="metadata=res://*/Models.TempLog.csdl|res://*/Models.TempLog.ssdl|res://*/Models.TempLog.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=BeanWeb;initial catalog=templog;Integrated Security=false;User Id=web_user;Password=FF40e64E;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <system.web>
     <identity impersonate="false" />
