--- a/HomeTempMonitor/HomeTempMonitor.csproj
+++ b/HomeTempMonitor/HomeTempMonitor.csproj
@@ -96,6 +96,10 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\bootstrap-theme.css" />
+    <Content Include="Content\bootstrap-theme.min.css" />
+    <Content Include="Content\bootstrap.css" />
+    <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\images\ajax-loader.gif" />
     <Content Include="Content\images\icons-png\action-black.png" />
     <Content Include="Content\images\icons-png\action-white.png" />
@@ -311,12 +315,8 @@
     <Content Include="Content\jquery.mobile.structure-1.4.5.min.css" />
     <Content Include="Content\jquery.mobile.theme-1.4.5.css" />
     <Content Include="Content\jquery.mobile.theme-1.4.5.min.css" />
-    <Content Include="Css\common.css" />
-    <Content Include="Css\desktop.css" />
-    <Content Include="Css\ipad-landscape.css" />
-    <Content Include="Css\ipad-portrait.css" />
-    <Content Include="Css\iphone-landscape.css" />
-    <Content Include="Css\iphone-portrait.css" />
+    <Content Include="Content\homeTemp.css" />
+    <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="index.html" />
     <Content Include="Mobile\touch-icon-ipad-retina.png" />
     <Content Include="Mobile\touch-icon-ipad.png" />
@@ -343,9 +343,17 @@
       <DependentUpon>TempLog.edmx</DependentUpon>
       <LastGenOutput>TempLog1.cs</LastGenOutput>
     </Content>
+    <Content Include="fonts\glyphicons-halflings-regular.woff2" />
+    <Content Include="fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="Content\bootstrap.css.map" />
+    <Content Include="Content\bootstrap-theme.css.map" />
     <None Include="Properties\PublishProfiles\BeanWeb.pubxml" />
     <None Include="Properties\PublishProfiles\newWebTemp.pubxml" />
     <None Include="Scripts\jquery-2.1.3.intellisense.js" />
+    <Content Include="Scripts\bootstrap.js" />
+    <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\date.format.js" />
     <Content Include="Scripts\homeTemp.js" />
     <Content Include="Scripts\jquery-2.1.3.js" />
